--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        EXCLUDED: ${{ secrets.EXCLUDED }}
-        EXCLUDED_LANGS: ${{ secrets.EXCLUDED_LANGS }}
+        EXCLUDED: ${{ vars.EXCLUDED }}
+        EXCLUDED_LANGS: ${{ vars.EXCLUDED_LANGS }}
         EXCLUDE_FORKED_REPOS: true
 
     # Commit all changed files to the repository
